# esteban

./: .gitignore  API_SETUP.md  un_ptit_to_do.md
client/: app.json  package-lock.json  package.json  tailwind.config.js
client/app/: chat.jsx  index.jsx  settings.jsx
client/components/chat/: AppAccessPanel.jsx  ChatComposer.jsx  ChatHeader.jsx  MessageBubble.jsx  TypingIndicator.jsx
client/config/: openableApps.js
client/hooks/: useChat.js  useOpenableApps.js
client/services/: api.js
server/: .env.example  README_SERVER.md  main.py  pyproject.toml  pyrightconfig.json
server/esteban/: app.py
server/esteban/controllers/: chat_controller.py  health_controller.py
server/esteban/models/: health.py  message.py
server/esteban/routes/: http.py  voice.py
server/esteban/services/: chat_service.py  deezer_auth.py  deezer_tool.py  voice_websocket_service.py
server/src/esteban/controllers/: chat_controller.py  voice_controller.py
server/src/esteban/models/: transcription.py
server/src/esteban/routes/: http.py
server/src/esteban/services/: chat_service.py  health_service.py  stt_service.py  voice_websocket_service.py
