[project]
name = "esteban"
version = "0.1.0"
description = "Your AI assistant, but he's actually yours"
readme = "README_SERVER.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "faster-whisper>=1.1.1",
    "flasgger>=0.9.7.1",
    "flask>=3.1.3",
    "flask-cors>=4.0.0",
    "flask-sock>=0.7.0",
    "langchain-ollama>=1.0.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.43.0",
]
